# demo-sistem

./: .env.example  README.md  main.py  pyproject.toml
app/kualitatif/: app.py
app/kualitatif/core/: data.py  llm.py  prompt.py
app/kualitatif/data/skj/: skj_inspektur.json  skj_kepala_seksi.json
app/kualitatif/notebooks/: json-rag.ipynb  pdf-rag.ipynb
app/query/: app.py
app/three_sixty/: app.py
app/three_sixty/services/: ai_analyst.py  ai_assessment.py
app/three_sixty/tabs/: tab_data_utama.py  tab_hasil_kerja.py  tab_perilaku.py
app/three_sixty/utils/: data_master.py
